--- a/roles/ceph-add-hosts/tasks/check-ceph-disks.yaml
+++ b/roles/ceph-add-hosts/tasks/check-ceph-disks.yaml
@@ -10,7 +10,7 @@
   delegate_to: "{{ groups.ceph_admins[0] }}"
 
 - name: Check if disks are ready, if they are not then rerun
-  when: results.stdout_lines | length > 1
+  when: results.stdout_lines | length < 1
 #   - "{{ results != '' }}"
 #   - "{{ results != None }}"
   include_tasks: "check-ceph-disks.yaml"
