--- a/roles/ceph-add-pool/tasks/main.yaml
+++ b/roles/ceph-add-pool/tasks/main.yaml
@@ -7,4 +7,4 @@
 - name: Define how large the pool is 
   run_once: true
   delegate_to: "{{ groups.ceph_admins[0] }}"
-  shell: "cephadm shell -- ceph osd pool set-quota {{ pool_name )) max_bytes {{ pool_size }}}"
+  shell: "cephadm shell -- ceph osd pool set-quota {{ pool_name )) max_bytes {{ pool_size }}"
