--- a/ceph-add-pool.yaml
+++ b/ceph-add-pool.yaml
@@ -4,7 +4,7 @@
   gather_facts: yes
   tasks:
    - name: Setup and configure ceph pools
-     include_role:
-       - ceph-add-pool
+     import_role:
+       name: ceph-add-pool
      loop: "{{ pools_path_list }}"
      include_vars: "{{ item }}"
