Adding boot on start options

--- a/proxmox-create-ceph-vms.yaml
+++ b/proxmox-create-ceph-vms.yaml
@@ -1,3 +1,6 @@
+- name: Setting the VMs to start on boot
+  set_fact: 
+    start_on_boot: true
 - name: Clone the ceph vm
   import_playbook: proxmox-clone-ceph-vms.yaml
 - name: Configure the ceph vms
