--- a/roles/proxmox-reconfigure-vm/tasks/main.yaml
+++ b/roles/proxmox-reconfigure-vm/tasks/main.yaml
@@ -27,3 +27,11 @@
   loop: "{{ guest_hosts }}"
   loop_control:
     loop_var: "guest_host"
+
+# Sets to boot with the hypervisor
+- name: Boot VM with host
+  run_once: true
+  shell: "qm set {{ item }} --onboot 1"
+  loop: "{{ guest_hosts | list() }}"
+  when: start_on_boot
+
