Moving it to the correct playbook

--- a/proxmox-configure-ceph-vms.yaml
+++ b/proxmox-configure-ceph-vms.yaml
@@ -4,6 +4,7 @@
   gather_facts: no
   vars:
     - guest_hosts: []
+    - start_on_boot: true
   tasks:
    - name: Assigning guest_hosts
      loop: "{{ ceph_specs.keys() | list }}"
