Commenting out callbacks

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -13,5 +13,4 @@
 remote_user = ansible
 forks = 30
 private_key_file = /etc/ansible/.ssh/id_rsa
-callbacks_enabled = profile_tasks
-
+# callbacks_enabled = profile_tasks
