--- a/roles/proxmox-reconfigure-vm/tasks/main.yaml
+++ b/roles/proxmox-reconfigure-vm/tasks/main.yaml
@@ -34,4 +34,5 @@
   shell: "qm set {{ vm_name[ item.name ] }} --onboot 1"
   loop: "{{ guest_hosts | list }}"
   when: start_on_boot
+  delegate_to: "{{ groups.proxmox_servers[0] }}"
 
