--- a/roles/proxmox-reconfigure-vm/tasks/main.yaml
+++ b/roles/proxmox-reconfigure-vm/tasks/main.yaml
@@ -30,7 +30,7 @@
 
 # Sets to boot with the hypervisor
 - name: Boot VM with host
-  run_once: true
+#  run_once: true
   shell: "qm set {{ vm_name[ item.name ] }} --onboot 1"
   loop: "{{ guest_hosts | list }}"
   when: start_on_boot
