Forgot to close quotes

--- a/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
+++ b/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
@@ -8,7 +8,7 @@
   set_fact:
     mac_address: "{{ mac_address }} | split(',')"
     mac_address: "{{ mac_address[0] }}"
-    mac_address: "{{ mac_address | split('=')}}
+    mac_address: "{{ mac_address | split('=')}}"
     mac_address: "{{ mac_address[0] }}"
 
 
