--- a/roles/ansible-setup/vars/main.yaml
+++ b/roles/ansible-setup/vars/main.yaml
@@ -1,5 +1,4 @@
 remote_user: ansible
 remote_group: "{{ remote_user }}"
 path_to_keys_as_list: 
-  - /etc/ansible/id_rsa.pub
-  - /home/isaac/.ssh/id_rsa.pub
+  - /etc/ansible/.ssh/id_rsa.pub
