--- a/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
+++ b/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Retrieve mac address
-  delegate_to: {{ groups.proxmox_servers[0] }}"
+  delegate_to: "{{ groups.proxmox_servers[0] }}"
   shell: "qm config all_VMIDs_dict[item] | grep net0 | tail -1 | awk {'print $2'}"
   register: mac_address
 
