--- a/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
+++ b/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
@@ -1,10 +1,21 @@
 ---
+# Gets the VMIDs from proxmox
+- name: Retrieve every VMID
+  shell: "qm list | awk {'print $1, $2'}"
+  register: all_VMIDs
+  delegate_to: "{{ groups.proxmox_servers[0] }}"
+
 - name: Retrieve mac address
   delegate_to: "{{ groups.proxmox_servers[0] }}"
   shell: "qm config {{ all_VMIDs_dict[item] }} | grep net0 | tail -1 | awk {'print $2'}"
   register: mac_address
   loop: "{{ all_VMIDs_dict.keys() }}"
   when: all_VMIDs_dict[item] == guest_host
+
+- name: Make dict of VMIDs with hostnames
+  set_fact:
+    all_VMIDs_dict: "{{ all_VMIDs_dict | combine({item.split(' ')[0]: item.split(' ')[1]} ) }}"
+  loop: "{{ all_VMIDs.stdout_lines }}"
 
 - name: Filter for the mac address
   set_fact:
