--- a/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
+++ b/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
@@ -19,6 +19,7 @@
 
 - name: Filter for the mac address
   set_fact:
+    mac_address: "{{ mac_adress.stdout }}"
     mac_address: "{{ mac_address }} | split(',')"
     mac_address: "{{ mac_address[0] }}"
     mac_address: "{{ mac_address | split('=')}}"
