Fixing stupid mistakes that I made at like 11:30 on a Sunday night

--- a/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
+++ b/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
@@ -19,11 +19,13 @@
 
 - name: Filter for the mac address
   set_fact:
-    mac_address: "{{ mac_adress.stdout }}"
-    mac_address: "{{ mac_address }} | split(',')"
-    mac_address: "{{ mac_address[0] }}"
-    mac_address: "{{ mac_address | split('=')}}"
-    mac_address: "{{ mac_address[0] }}"
+    mac_address: {{ item }}
+  loop:
+    - "{{ mac_adress.stdout }}"
+    - "{{ mac_address }} | split(',')"
+    - "{{ mac_address[0] }}"
+    - "{{ mac_address | split('=')}}"
+    - "{{ mac_address[0] }}"
 
 
 - name: Add kickstarts
