--- a/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
+++ b/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
@@ -19,13 +19,16 @@
 
 - name: Filter for the mac address
   set_fact:
-    mac_address: {{ item }}
-  loop:
-    - "{{ mac_adress.stdout }}"
-    - "{{ mac_address }} | split(',')"
-    - "{{ mac_address[0] }}"
-    - "{{ mac_address | split('=')}}"
-    - "{{ mac_address[0] }}"
+    mac_address: "{{ mac_address.stdout_lines|
+             flatten|
+              map('regex_replace', _regex, _replace)|
+              map('trim')|
+              map('split')|
+              map('join', ':')|
+              list }}"
+    vars:
+      _regex: '.*"(.*)"'
+      _replace: '\1'
 
 
 - name: Add kickstarts
