--- a/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
+++ b/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
@@ -19,13 +19,9 @@
 
 - name: Filter for the mac address	
   set_fact:
-    mac_addresses: "({{ item.stdout_lines }})"
+    mac_addresses: "{{ item.stdout_lines | regex_findall('^([0-9A-Fa-f]{2}[:-]){5}([0-9A-Fa-f]{2})$') }}"
   when: item.skipped is not true
   loop: "{{ raw_mac_address.results }}"
-
-- name: Display mac_addresses
-  debug:
-    msg: "{{ mac_addresses }}"
 
 - name: Add kickstarts
   delegate_to: "{{ groups.ipxe_servers[0] }}"
