--- a/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
+++ b/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
@@ -12,14 +12,14 @@
 
 - name: Retrieve mac address
   delegate_to: "{{ groups.proxmox_servers[0] }}"
-  shell: "qm config {{ item }} | grep net0 | tail -1 | awk {'print $2'}"
+  shell: "qm config {{ item }} | grep net0 | tail -1 | awk {'print $2'} | grep -o -E '([[:xdigit:]]{1,2}:){5}[[:xdigit:]]{1,2}'"
   register: raw_mac_address
   loop: "{{ all_VMIDs_dict.keys() }}"
   when: all_VMIDs_dict[item] == guest_host
 
 - name: Filter for the mac address	
   set_fact:
-    mac_addresses: "{{ item.stdout_lines | regex_findall('^([0-9A-Fa-f]{2}[:-]){5}([0-9A-Fa-f]{2})$') + mac_addresses }}"
+    mac_addresses: "{{ item.stdout_lines + mac_addresses }}"
   when: item.changed
   loop: "{{ raw_mac_address.results }}"
   
