--- a/roles/proxmox-create-vm/tasks/create_vm.yaml
+++ b/roles/proxmox-create-vm/tasks/create_vm.yaml
@@ -1,4 +1,10 @@
 ---
+- name: Create disks
+  shell: "pvesm alloc local-lvm {{ item }} '' 0"
+  loop: "{{ ID_list }}"
+  delegate_to: "{{ groups.proxmox_servers[0] }}"
+  when: all_VMIDs_dict[item] == guest_host
+
 # Create the VM
 - name: Create VM
   run_once: true
