--- a/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
+++ b/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
@@ -29,6 +29,7 @@
     src: kickstart.ks.j2
     dest: /var/www/html/rocky/8/ks/{{ item }}.ks
   loop: "{{ mac_addresses }}"
+  when: all_VMIDs_dict[item] == guest_host
     
 - name: Add ipxe
   delegate_to: "{{ groups.ipxe_servers[0] }}"
@@ -36,3 +37,4 @@
     src: mac-address-template.ipxe.j2
     dest: /var/www/html/labnet/{{ item }}.ipxe
   loop: "{{ mac_addresses }}"
+  when: all_VMIDs_dict[item] == guest_host
