--- a/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
+++ b/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
@@ -27,12 +27,12 @@
   delegate_to: "{{ groups.ipxe_servers[0] }}"
   template: 
     src: kickstart.ks.j2
-    dest: /var/www/html/rocky/8/ks/{{ item }}.ks
-  loop: "{{ mac_addresses }}"
+    dest: /var/www/html/rocky/8/ks/{{ ansible_host }}.ks
+#  loop: "{{ mac_addresses }}"
     
 - name: Add ipxe
   delegate_to: "{{ groups.ipxe_servers[0] }}"
   template:
     src: mac-address-template.ipxe.j2
-    dest: /var/www/html/labnet/{{ item }}.ipxe
-  loop: "{{ mac_addresses }}"
+    dest: /var/www/html/labnet/{{ ansible_host }}.ipxe
+#  loop: "{{ mac_addresses }}"
