--- a/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
+++ b/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
@@ -1,8 +1,9 @@
 ---
 - name: Retrieve mac address
   delegate_to: "{{ groups.proxmox_servers[0] }}"
-  shell: "qm config {{ all_hostnames_dict[guest_host] }} | grep net0 | tail -1 | awk {'print $2'} | grep -o -E '([[:xdigit:]]{1,2}:){5}[[:xdigit:]]{1,2}'"
+  shell: "qm config {{ all_hostname_dict[guest_host] }} | grep net0 | tail -1 | awk {'print $2'} | grep -o -E '([[:xdigit:]]{1,2}:){5}[[:xdigit:]]{1,2}'"
   register: raw_mac_address
+  when: all_VMIDs_dict[guest_host] == guest_host 
 
 - name: Filter for the mac address	
   set_fact:
