--- a/roles/proxmox-create-vm/tasks/main.yaml
+++ b/roles/proxmox-create-vm/tasks/main.yaml
@@ -18,8 +18,8 @@
   include_tasks: "retrieve_VMIDs.yaml"
 
 - name: Add kickstarts and ipxe scripts
-  loop: "{{ ansible_play_hosts }}"
+  loop: "{{ ID_list }}"
   loop_control:
-    loop_var: "guest_host"
+    loop_var: "guest_vmid"
   include_tasks: "add_kickstarts_and_ipxe.yaml"
   
