--- a/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
+++ b/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
@@ -3,7 +3,7 @@
   delegate_to: "{{ groups.proxmox_servers[0] }}"
   shell: "qm config {{ all_VMIDs_dict[guest_vmid] }} | grep net0 | tail -1 | awk {'print $2'} | grep -o -E '([[:xdigit:]]{1,2}:){5}[[:xdigit:]]{1,2}'"
   register: raw_mac_address
-  when: all_VMID_dict[guest_vmid] == guest_vmid
+  when: all_VMIDs_dict[guest_vmid] == guest_vmid
 
 - name: Filter for the mac address	
   set_fact:
