forgot to remove old

--- a/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
+++ b/roles/proxmox-create-vm/tasks/add_kickstarts_and_ipxe.yaml
@@ -7,7 +7,7 @@
 
 - name: Filter for the mac address	
   set_fact:
-    mac_address: "{{ [ item.stdout | lower ] + mac_addresses }}"
+    mac_address: "{{ item.stdout | lower }}"
   when: raw_mac_address.changed
   loop: "{{ raw_mac_address.results }}"
   
