--- a/roles/proxmox-start-vm/tasks/create_vm.yaml
+++ b/roles/proxmox-start-vm/tasks/create_vm.yaml
@@ -5,7 +5,7 @@
   register: status
 
 - name: Check if still running
-  when status.stdout == "status: running"
+  when: status.stdout == "status: running"
   set_fact:
     count: "{{ count | int + 1 }}"
 
