--- a/roles/proxmox-create-vm/tasks/main.yaml
+++ b/roles/proxmox-create-vm/tasks/main.yaml
@@ -23,7 +23,7 @@
     loop_var: "guest_vmid"
   include_tasks: "add_kickstarts_and_ipxe.yaml"
 
-- name: Add kickstarts and ipxe scripts
+- name: Start VMs
   loop: "{{ ID_list }}"
   shell: "qm start {{ item }}"
-  delegate_to: "{{ groups.ipxe_servers[0] }}"
+  delegate_to: "{{ groups.proxmox_servers[0] }}"
