--- a/ansible.cfg
+++ b/ansible.cfg
@@ -12,5 +12,5 @@
 [defaults]
 remote_user = ansible
 forks = 30
-private_key_file = /etc/ansible/.ssh/id_rsa
+private_key_file = .ssh/id_rsa
 # callbacks_enabled = profile_tasks
