Forgotten to update old var

--- a/roles/nfs-share/tasks/main.yaml
+++ b/roles/nfs-share/tasks/main.yaml
@@ -1,6 +1,6 @@
 - name: "Create folder {{ nfs_local_mount_point }}"
   file: 
-    path: "{{ nfs_name }}"
+    path: "{{ nfs_local_mount_point }}"
     state: directory
     owner: root
     group: root
