Fixing all the problems

--- a/roles/bareos/tasks/retrieve-bareos-fd-password.yaml
+++ b/roles/bareos/tasks/retrieve-bareos-fd-password.yaml
@@ -1,17 +1,17 @@
 - name: Looking up bareos-fd configs
   slurp:
     src: /etc/bareos/bareos-fd.d/director/bareos-dir.conf
-  register: client-config
+  register: client_config
 
 - name: Listifying config
-  set_facts:
-    config_list: "{{ client-config['content'] | b64decode | split('\n') }}"
+  set_fact:
+    config_list: "{{ client_config['content'] | b64decode | split('\n') }}"
 
 - name: Pulling password
-  set facts:
+  set_fact:
     password: "{{ item }}"
   loop: "{{ config_list }}"
-  when: "'Password' in{{ item }} "
+  when: "{{ 'Password' in item }}"
 
 - name: Pushing bareos-fd config
   template:
@@ -20,7 +20,7 @@
     owner: bareos
     group: bareos
     mode: '0640'
-  delegate_to: "{{ groups.bareos-dir_servers[0] }}"
+  delegate_to: "{{ groups['bareos-dir_servers'][0] }}"
 
 - name: Adding backup job
   template:
@@ -29,4 +29,4 @@
     owner: bareos
     group: bareos
     mode: '0640'
-  delegate_to: "{{ groups.bareos-dir_servers[0] }}"
+  delegate_to: "{{ groups['bareos-dir_servers'][0] }}"
