--- a/roles/bareos/tasks/add-repo-bareos.yaml
+++ b/roles/bareos/tasks/add-repo-bareos.yaml
@@ -1,5 +1,8 @@
-- name:
-  yum_repository:
-    name: bareos-community
-    description: Bareos repos
-    baseurl: https://download.bareos.org/current/EL_8/bareos.repo
+- name: Downloading repo adding script
+  uri:
+    url: https://download.bareos.org/current/EL_8/add_bareos_repositories.sh
+    dest: /tmp/
+
+- name: Run repo script
+  shell: "/mnt/add_bareos_repositories.sh"
+
