Adding handler to restart bareos-dir daemon

--- a/roles/bareos/tasks/retrieve-bareos-fd-password.yaml
+++ b/roles/bareos/tasks/retrieve-bareos-fd-password.yaml
@@ -30,3 +30,10 @@
     group: bareos
     mode: '0640'
   delegate_to: "{{ groups['bareos-dir_servers'][0] }}"
+
+handler:
+  - name: Restart bareos-dir daemon
+    service:
+      name: bareos-dir
+      state: restarted
+    delegate_to: "{{ groups['bareos-dir_servers'][0]}}"
