--- a/roles/bareos/tasks/retrieve-bareos-fd-password.yaml
+++ b/roles/bareos/tasks/retrieve-bareos-fd-password.yaml
@@ -32,8 +32,7 @@
   delegate_to: "{{ groups['bareos-dir_servers'][0] }}"
 
 handler:
-  - name: Restart bareos-dir daemon
-    service:
-      name: bareos-dir
-      state: restarted
+  - name: Reloading bareos director
+    shell: "echo reload | bconsole"
     delegate_to: "{{ groups['bareos-dir_servers'][0]}}"
+    run_once: true
