--- a/roles/bareos/tasks/retrieve-bareos-fd-password.yaml
+++ b/roles/bareos/tasks/retrieve-bareos-fd-password.yaml
@@ -30,9 +30,4 @@
     group: bareos
     mode: '0640'
   delegate_to: "{{ groups['bareos-dir_servers'][0] }}"
-
-handler:
-  - name: Reloading bareos director
-    shell: "echo reload | bconsole"
-    delegate_to: "{{ groups['bareos-dir_servers'][0]}}"
-    run_once: true
+  notify: "Reload bareos director"
