--- a/roles/bareos/handlers/main.yaml
+++ b/roles/bareos/handlers/main.yaml
@@ -1,4 +1,4 @@
-- name: Reloading bareos director
+- name: Reload bareos director
   shell: "echo reload | bconsole"
   delegate_to: "{{ groups['bareos-dir_servers'][0]}}"
   run_once: true
