Correcting template and file names

--- a/roles/bareos/tasks/retrieve-bareos-fd-password.yaml
+++ b/roles/bareos/tasks/retrieve-bareos-fd-password.yaml
@@ -16,7 +16,7 @@
 - name: Pushing bareos-fd config
   template:
     src: bareos-fd.conf.j2
-    dest: "/etc/bareos/bareos-dir.d/client/{{ inventory_hostname_short }}.conf"
+    dest: "/etc/bareos/bareos-dir.d/client/{{ inventory_hostname_short }}-fd.conf"
     owner: bareos
     group: bareos
     mode: '0640'
