Adding reload for both steps

--- a/roles/bareos/tasks/retrieve-bareos-fd-password.yaml
+++ b/roles/bareos/tasks/retrieve-bareos-fd-password.yaml
@@ -21,6 +21,7 @@
     group: bareos
     mode: '0640'
   delegate_to: "{{ groups['bareos-dir_servers'][0] }}"
+  notify: "Reload bareos director"
 
 - name: Adding backup job
   template:
